Table for selection keys.

--- a/src/Chapter3.tex
+++ b/src/Chapter3.tex
@@ -335,6 +335,14 @@ Finally there are commands to add a full track from the currently focused spot.
 The selection is shown in BDV views as red or magenta spots and links by default.
 In BDV views you can only edit the selection via \keys{\shift+click}.
 The interaction with the focus also work as described above.
+These default key-bindings are recapitulated in the Table~\ref{tab:MastodonSelectionKeys} page~\pageref{tab:MastodonSelectionKeys}.
+
+\begin{table}[!htbp]
+    \centering
+    \caption{Default selection key-bindings for Mastodon views.}
+    \input{src/TableSelectionKeys.tex}
+    \label{tab:MastodonSelectionKeys}
+\end{table}
 
 
 \begin{figure}
