--- a/src/TableFocusKeys.tex
+++ b/src/TableFocusKeys.tex
@@ -4,22 +4,31 @@
     \textbf{Action}                 & \textbf{Key}              
     \\ \midrule
     
+    \multicolumn{2}{c}{\textit{Navigation with the Focus.}}
+    \\ \midrule
+    
+    Follow a spot across time within a track with the focus.      & \keys{\arrowkeyup} and \keys{\arrowkeydown}
+    \\ \midrule
+
+    Jump to the beginning of a branch.                              & \keys{\Alt + \arrowkeyup}
+    \\ \midrule
+    
+    Jump to the end of a branch.                                    & \keys{\Alt + \arrowkeydown}
+    \\ \midrule
+
+    Jump to the beginning of another branch.                              & \keys{\ctrl + \Alt + \arrowkeyup}
+    \\ \midrule
+
+    Jump to the end of another branch.                                    & \keys{\ctrl + \Alt + \arrowkeydown}
+    \\ \midrule
+    
     \multicolumn{2}{c}{\textit{Focus in TrackScheme.}}
     \\ \midrule
     
-    Move the focus around from one track or one track branch to another.                    & \keys{\arrowkeyleft} and \keys{\arrowkeyright}
-    \\ \midrule
-    
-    Move the focus across time within a track.      & \keys{\arrowkeyup} and \keys{\arrowkeydown}
+    Move the focus around from one track or one track branch to another.  & \keys{\arrowkeyleft} and \keys{\arrowkeyright}
     \\ \midrule
     
     Edit the label of the focused spot.             & \keys{\return}
-    \\ \midrule
-
-    \multicolumn{2}{c}{\textit{Focus in BDV.}}
-    \\ \midrule
-    
-   Follow a spot across time within a track with the focus.      & \keys{\arrowkeyup} and \keys{\arrowkeydown}
-  \\ \bottomrule
+    \\ \bottomrule
   
 \end{tabulary}
