Animations  in TrackScheme and bookmarks in BDV.

--- a/src/Chapter3.tex
+++ b/src/Chapter3.tex
@@ -182,6 +182,7 @@ Navigating across branch with \keys{\Alt+\arrowkeyup} and \keys{\Alt+\arrowkeydo
 
 
 \subsection{Synchronizing several views together.}
+\label{sec:LinkingViews}
 
 You probably noticed that both BDV and \TrackScheme views have a toolbar on the of the view itself.
 This toolbar can be hidden and shown by a press of the \keys{T} key.
