--- a/src/Chapter4.tex
+++ b/src/Chapter4.tex
@@ -4,16 +4,65 @@ In the previous chapter we have seen how to edit single spots and links in Masto
 As we said before, the goal of Mastodon is to let you harness very large images, for which the number of annotations can be very large too.
 It can be very easy to get lost within such large images and loose track of where we are within the sample image and what cell we follow. 
 So we have added several features that are made especially to get your bearings in large datasets.
-More than anything, these features are about giving visual cues that ease orientation, and exploit event that a human eye would consider salient. 
+More than anything, these features are about giving visual cues that ease orientation, and exploit events and signal that would help a human brain get a sense of orientation. 
 We took some inspiration from video-games, that are very good at communicating condensed and synthetic information to the player
 (but only for a limited part; there is no screenshake when you delete a spot).
 
 
-
 \subsection{Bookmarks in the BDV views.}
+
+The \bdv~\cite{bdv} is the image component of Mastodon and is meant to deal with very large images.
+It offers interactive and responsive user interaction, and to achieve this without any hardware acceleration, it resorts to only displaying a 2D slice through the data.
+This 2D slice can be arbitrarily positioned and oriented. 
+When it comes to annotating a 3D image, using a 2D slice through it is a good approach. 
+A full 3D view might actually hinders proper and efficient annotation of the data with a flat 2D screen and a mouse. 
+The 3D view leads to ambiguities about the depth positioning of your cursor, and the image data that stands between the camera eye and the plan of interest may hide it.
+Parenthetically, these issues with interacting with 3D data are best solved with virtual reality devices, but Mastodon is not a tool that exploit them.
+The 2D view offer clarity but conversely does not offer a great feeling of the context. 
+We have to live with that.
+
+However to facilitate orienting yourself, or retrieving a key point in the data, you can register bookmarks in the BDV views. 
+The bookmarks were already implemented in the \bdv tool itself before its use in Mastodon.
+They let you store a position and orientation in space as bookmarks. 
+You can later call them again and retrieve said position. 
+\begin{myitemize}
+    \item First move to the position and orientation you want to store in a bookmark.
+    \item Then press \keys{\shift+B}. You should see a message prompting you to press another key.
+    \item Pick one and press it. This key will be used as a tag for this bookmark.
+    \item To later retrieve the position and orientation of this bookmark, press \keys{B} then the bookmark's key. The view should animate and restore the stored position and time-point.
+    \item \keys{O} does the same things, but only restore the bookmark orientation, not its position.
+\end{myitemize}
+
+You can many bookmarks, all identified by the key you press after the bookmark command.
+
+
 
 \subsection{Linking several views together.}
 
-\subsection{In Mastodon everything is animated.}
+You can generate as many views as you want in Mastodon, and you can link several of them via the lock system \smallimg{lock.png}.
+This is a good way to improve the perception of context, by linking several views that display for instance a close-up view of the data and another view displaying a bird-eye view of it.
+We already presented this feature in the Section~\ref{sec:LinkingViews} page~\pageref{sec:LinkingViews}. 
+The Figure~\ref{fig:ViewsInSync} page~\pageref{fig:ViewsInSync} shows an example of a view configuration with three views in sync, showing each a different level of desired information.
+We direct you there for details on how to use the lock system.
+
+
+\subsection{In \TrackScheme everything is animated.}
+
+If you went through the previous tutorial, you probably noticed that editing events are associated with animations in \TrackScheme.
+For instance, if you delete a link in the middle of a track, the 'bottom' part of the track will move to the left side of TrackScheme, in a quick animation.
+If you undo the deletion, the branch will move back to its original place the same way. 
+Deleting a spot makes it fade rather than disappear.
+These animations are more than a toy.
+Something we learned that hard way with MaMuT~\cite{MaMuT} is that point-wise editing the data can completely confuse and disorient the user.
+A single link deletion will generate a big rearrangement in the track hierarchy, and therefore will change the \TrackScheme view a lot. 
+Without any subtle cues to the user, these changes will disorient them quickly.
+Animating the editing events is a great way to hint them about what happens to the data modify in a user-friendly way.
+
+We also added some fluidity in \TrackScheme navigation. 
+In the TrackMate~\cite{TrackMate} and MaMuT~\cite{MaMuT} version of \TrackScheme, panning and zooming were done in discrete discontinuous steps, that would also lead to confusion.
+In Mastodon, moving and zooming are done continuously. 
+There is even some inertia again to emulate interacting with a tangible panel.
+
+
 
 \subsection{Spatial context in TrackScheme.}
