WIP: Intro chapter 6 tags and features.

--- a/src/Chapter5.tex
+++ b/src/Chapter5.tex
@@ -1,1 +1,12 @@
-\section{Calculation of numerical features and tagging items.}
+\section{Numerical features and tags. The table view.}
+
+Mastodon is a tracking and lineaging tool.
+Its output is a collection of tracks, and the analysis of these tracks to yield statistics on \eg velocity, displacement \etc is carried out in another software package such as MATLAB or Python.
+Nonetheless you will find in Mastodon tools to compute \textit{numerical features} on data item. 
+Numerical features are numbers that can be calculated on spots, links and tracks of the data. 
+For instance there are feature for the number of links that touch a spot, or the displacement of a link or the number of spots in a track.
+You can find them within Mastodon because it is convenient, but also because they are very useful for the interactive exploration of your data. 
+Coupled with feature-based coloring, the display and sorting of values in the table view and the selection creator tool, they can considerably accelerate and facilitate making sense of the data.
+
+Numerical features are numbers that classically relate to a physical quantity.
+When we need to \textit{categorize} items, we rely on \textit{tags}.
