--- a/MastodonManual.tex
+++ b/MastodonManual.tex
@@ -168,14 +168,17 @@
 \newpage
 \part{Tutorials.}
 
+% Automated tracking.
 \newpage
 % \input{ src/Chapter2.tex }
 
+% Manual tracking.
 \newpage
-\input{ src/Chapter3.tex }
+% \input{ src/Chapter3.tex }
 
+% Orienting in Mastodon.
 \newpage
-\input{ src/Chapter4.tex }
+% \input{ src/Chapter4.tex }
 
 \newpage
 \input{ src/Chapter5.tex }
