Tag-set sections.

--- a/src/Chapter2.tex
+++ b/src/Chapter2.tex
@@ -1,4 +1,5 @@
 \section{Getting started with Mastodon. Automated tracking.}
+\label{Getting_started}
 
 This tutorial is the starting point for new Mastodon users. 
 It will walk you through basic operations in Mastodon, opening a dataset and creating a Mastodon project, automatically detect cells and link them, and show you how to use the main views of Mastodon.
