--- a/src/Chapter3.tex
+++ b/src/Chapter3.tex
@@ -310,6 +310,7 @@ This way you can create links between spots separated by more than one time-poin
 
 
 \subsection{The selection.}
+\label{Selection_tool}
 
 The selection is the third visual cue of Mastodon and probably the most important one. 
 It behaves and has the role of a classical selection tool you would find in another software that manages a collection of data items. 
